--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -12,7 +12,7 @@
         src: url('../fonts/#{$font-family}/#{$font-name}-#{$font-weight}.ttf') format('truetype')     // Safari, Android, iOS
 
 
-@include font('Lato', 'normal', 300, 'lato')
-@include font('Lato', 'normal', 400, 'lato')
-@include font('Lato', 'normal', 900, 'lato')
-@include font('VarelaRound', 'normal', 400, 'varelaRound')
+@include font('PlayfairDisplay', 'normal', 400, 'playfairDisplay')
+@include font('Jost', 'normal', 300, 'jost')
+@include font('Jost', 'normal', 400, 'jost')
+@include font('Jost', 'normal', 500, 'jost')
