--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -1,11 +1,11 @@
 h1
     font-family: 'PlayfairDisplay'
     font-weight: 400
-    font-size: 3.7em
+    font-size: 3.7rem
 
 .light-thirteen
-   font-size: 0.9em
+   font-size: 0.9rem
    font-family: 'Jost'
    font-weight: 300
-   letter-spacing: 0.05em
-   line-height: 2em
+   letter-spacing: 0.05rem
+   line-height: 2rem
