--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -9,3 +9,27 @@ h1
    font-weight: 300
    letter-spacing: 0.05rem
    line-height: 2rem
+
+
+.light-seventeen
+   font-size: 1.13rem
+   font-family: 'Jost'
+   font-weight: 300
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+
+.regular-seventeen
+   font-size: 1.13rem
+   font-family: 'Jost'
+   font-weight: 300
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+
+.medium-ninteen
+   font-size: 1.26rem
+   font-family: 'Jost'
+   font-weight: 500
+   letter-spacing: 0.05rem
+   line-height: 2rem
