--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -1,12 +1,26 @@
-h1
+.h1-style
     font-family: 'PlayfairDisplay'
     font-weight: 400
     font-size: 3.7rem
+
+
+.h2-style
+    font-family: 'PlayfairDisplay'
+    font-weight: 400
+    font-size: 2.7rem
 
 .light-thirteen
    font-size: 0.9rem
    font-family: 'Jost'
    font-weight: 300
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+
+.regular-fiveteen
+   font-size: 1rem
+   font-family: 'Jost'
+   font-weight: 400
    letter-spacing: 0.05rem
    line-height: 2rem
 
