--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -188,3 +188,48 @@ body
         &__top
             border-bottom: 1px solid $line_gray
         &__bottom
+
+
+
+.footer__form
+    &__container
+        max-width: 780px
+        margin: 0 auto
+        .section-text
+            text-align: center
+        .form
+            display: flex
+            flex-direction: row
+            align-items: center
+            &__input-item
+                position: relative
+                margin-right: 1rem
+                width: 100%
+                &__label
+                    position: absolute
+                    top: 50%
+                    left: 1.6rem
+                    transform: translate(0%, -50%)
+                    font-size: 1rem
+                    font-family: 'Jost'
+                    font-weight: 400
+                    letter-spacing: 0.05rem
+                    line-height: 2rem
+                    color: $dark
+                &__email
+                    width: 100%
+                    padding: 0.74rem
+                    border: 2px solid $dark
+                    border-radius: 0
+                    background: none
+            &__button
+                padding: 0.534em 1.828em
+                font-size: 1.13rem
+                font-family: 'Jost'
+                font-weight: 500
+                letter-spacing: 0.05rem
+                line-height: 2rem
+                color: $white
+                background: $dark
+                border: none
+                border-radius: 0
