--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -1,7 +1,7 @@
 .h1-style
     font-family: 'PlayfairDisplay'
     font-weight: 400
-    font-size: 3.7rem
+    font-size: 3.5rem
 
 
 .h2-style
@@ -21,6 +21,13 @@
    font-size: 1rem
    font-family: 'Jost'
    font-weight: 400
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+.lights-fiveteen
+   font-size: 1rem
+   font-family: 'Jost'
+   font-weight: 300
    letter-spacing: 0.05rem
    line-height: 2rem
 
