--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -9,6 +9,15 @@
     font-weight: 400
     font-size: 2.7rem
 
+
+.h4-style
+   font-size: 1rem
+   font-family: 'Jost'
+   font-weight: 500
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+
 .light-thirteen
    font-size: 0.9rem
    font-family: 'Jost'
