--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -4,7 +4,7 @@ $dark: #17191A
 $blue: #70A0C4
 $dark-light: #4F565B
 $line_gray: #DBDBDB
-
+$bg-blue: #c3d2d9
    
 
 .main
@@ -27,7 +27,7 @@ $line_gray: #DBDBDB
       .slick-arrow
          position: absolute
          top: 45%
-         transform: translate(-50%,0)
+         transform: translateY(-50%)
          z-index: 1
          width: 2.8rem
          height: 2.8rem
@@ -176,6 +176,16 @@ $line_gray: #DBDBDB
       width: 100%
       &__item
 
+
+
+.small-product-cart
+   max-width: 270px
+   .product-cart__top
+      width: 270px
+      height: 270px
+
+
+
 .product-cart
    max-width: 360px
    &:hover
@@ -266,3 +276,148 @@ $line_gray: #DBDBDB
                transition: all 0.3s ease
       &__right
          .add-like
+
+
+.feedback
+   background: $bg-blue
+   padding: 5rem 0 4rem
+   .section-title
+      margin-bottom: 2.8rem
+   &__slider
+      position: relative
+      &:hover
+         .feedback__slider__text
+            .slick-prev
+               left: 15%
+               opacity: 1
+            .slick-next
+               right: 15%
+               opacity: 1
+      &__img
+         .slick-list
+            width: 450px
+            margin: 0 auto
+         .feedback__img__el
+            height: 140px
+            .img-cover
+               display: block
+               width: 80px
+               height: 80px
+               border-radius: 50%
+               overflow: hidden
+               position: relative
+               top: 50%
+               left: 50%
+               transform: translate(-50%, -50%)
+               transition: all 0.5s ease
+               &__img
+                  position: absolute
+                  top: 50%
+                  left: 50%
+                  transform: translate(-50%, -50%)
+                  width: 150%
+         .slick-current
+            .img-cover
+               width: 115px !important
+               height: 115px !important
+               box-shadow: 0 3px 6px rgba($dark, 0.3)
+      &__text
+         margin: 0
+         position: initial
+         .slick-arrow
+            position: absolute
+            top: 23%
+            z-index: 1
+            width: 2.8rem
+            height: 2.8rem
+            background: rgba($light, 0.5)
+            border-radius: 50%
+            display: flex
+            justify-content: center
+            align-items: center
+            transition: all 0.5s ease
+            opacity: 0
+            &::before
+               content: none
+         .slick-prev
+            left: 0%
+         .slick-next
+            right: 0%
+         .slick-dots
+            position: absolute
+            bottom: 0
+            left: 0
+            text-align: center
+            &>li
+               margin: 0 0.5rem 0 0
+               button
+                  width: 0.6rem
+                  height: 0.6rem
+                  background: rgba($dark, 0.4)
+                  border-radius: 50%
+                  transition: all 0.3s ease
+                  margin: 0
+                  padding: 0
+                  &::before
+                     content: none
+            .slick-active
+               button
+                  width: 0.7rem
+                  height: 0.7rem
+                  background: rgba($dark, 1)
+         .feedback__text__el
+            text-align: center
+            .el-name
+               width: 600px
+               margin: 0 auto 1.8rem
+               color: $dark
+               display: block
+            .el-description
+               color: $dark-light
+               display: block
+               width: 600px
+               margin: 0 auto 3.2rem
+
+
+
+.small-products
+   padding: 6rem 0
+   &__list
+      display: flex
+      justify-content: space-between
+      flex-direction: row
+      width: 100%
+      &__item
+
+
+.about
+   padding: 6rem 0
+   &__content
+      &__img-cover
+         width: 100%
+         height: 680px
+         display: block
+         position: relative
+         overflow: hidden
+         &__img
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            width: 100%
+      &__text
+         display: flex
+         flex-direction: row
+         justify-content: space-around
+         margin-top: -80px
+         position: relative
+         z-index: 1
+         .text-box
+            text-align: center
+            width: 310px
+            height: 160px
+            background: $white
+            box-shadow: 0 3px 6px rgba($dark, 0.16)
+            display: flex
+            align-items: center
+            justify-content: center
