--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -64,3 +64,12 @@
    letter-spacing: 0.05rem
    line-height: 2rem
    font-style: normal
+
+
+.regular-ninteen
+   font-size: 1.26rem
+   font-family: 'Jost'
+   font-weight: 400
+   letter-spacing: 0.05rem
+   line-height: 2rem
+   font-style: normal
