--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -12,6 +12,109 @@ html
     max-width: 100%
     margin: 0 auto
 
+.left-ziro
+    left: 0 !important
+
+.fullscreen-menu
+    position: fixed
+    z-index: $fullscreen-menu-z-index
+    top: 0
+    left: -100%
+    width: 100%
+    height: 100vh
+    background: $white
+    transition: all 0.3s ease
+    .close-button-cover
+        padding: 2rem 0
+        .close-button
+            width: 2.5rem
+            height: 2.5rem
+            background: rgba($dark-light, 0.1)
+            border-radius: 50%
+            border: none
+            position: relative
+            &:hover
+                &::before
+                    transform: translate(-50%, -50%) rotate(0deg)
+                    background: $blue
+                &::after
+                    transform: translate(-50%, -50%) rotate(0deg)
+                    background: $blue
+            &::before
+                content: ''
+                position: absolute
+                top: 50%
+                left: 50%
+                transform: translate(-50%, -50%) rotate(45deg)
+                width: 50%
+                height: 2px
+                background: $dark-light
+                transition: all 0.3s ease
+            &::after
+                content: ''
+                position: absolute
+                top: 50%
+                left: 50%
+                transform: translate(-50%, -50%) rotate(-45deg)
+                width: 50%
+                height: 2px
+                background: $dark-light
+                transition: all 0.3s ease
+    &__nav
+        position: relative
+        max-width: 23rem
+        padding-right: 3rem
+        &::after
+            content: ''
+            position: absolute
+            left: 100%
+            top: 0
+            width: 1px
+            height: 300%
+            background: linear-gradient(0deg, transparent, $dark-light)
+        .fullscreen__nav__list
+            .curent-hover
+                .arrow-cover
+                    background: rgba($dark-light, 0.1)
+            &__item
+                display: flex
+                justify-content: space-between
+                flex-direction: row
+                margin-bottom: 1rem
+                &>a
+                    color: $dark-light
+                    text-decoration: none
+                    text-transform: uppercase
+                .arrow-cover
+                    width: 2.5rem
+                    height: 2.5rem
+                    background: rgba($dark-light, 0)
+                    border-radius: 50%
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    transition: all 0.3s ease
+                .fullscreen__sub-menu
+                    position: absolute
+                    top: 0
+                    left: calc(100% + 3rem)
+                    display: flex
+                    &__item
+                        margin-right: 12rem
+                        &>a
+                            color: $dark
+                            text-decoration: none
+                            cursor: text
+                            margin-bottom: 2rem
+                            display: inline-block
+                        &__pages
+                            li
+                                &>a
+                                    color: $dark-light
+                                    text-decoration: none
+                                    margin-bottom: 0.7rem
+                                    display: inline-block
+
 
 .header
     position: absolute
