--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,4 +1,5 @@
 //color
+$black: #000000
 $dark: #17191A
 $dark-light: #4F565B
 $light: #F7F7F7
@@ -12,3 +13,5 @@ $line_gray: #DBDBDB
 $header-z-index: 100
 $header__sub-nav-z-index: 99
 $fullscreen-menu-z-index: 1000
+$cart-menu-z-index: 900
+$cart-menu-overlay-z-index: 890
