--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -10,10 +10,10 @@
     font-size: 2.7rem
 
 
-.h4-style
-   font-size: 1rem
-   font-family: 'Jost'
-   font-weight: 500
+.h3-style
+   font-size: 2rem
+   font-family: 'PlayfairDisplay'
+   font-weight: 400
    letter-spacing: 0.05rem
    line-height: 2rem
 
@@ -52,7 +52,7 @@
 .regular-seventeen
    font-size: 1.13rem
    font-family: 'Jost'
-   font-weight: 300
+   font-weight: 400
    letter-spacing: 0.05rem
    line-height: 2rem
 
